# simple-pipe

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py
src/simple_pipe/: __init__.py  pipe.py
src/simple_pipe/code_generation/: generate_partial.py  partial.py  partial.py.jinja2  partial_header.py.jinja2
tests/: code_with_correct_types.py  test_partial.py  test_pipe.py
